Fix moving out-of-bounds draw / fly objects

Actually move the object in the right direction, if it's outside
of the document boundaries.

Fixes the mysterious effect, that negative y-offset in fdo#80926
changed the objects x-offset values.

Change-Id: If88cf2a07fb44537b2e047e77c5e009664db94af